--- a/Astronomy-Hybrid/Astronomy-Hybrid/Base.lproj/Main.storyboard
+++ b/Astronomy-Hybrid/Astronomy-Hybrid/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Photos Collection View Controller-->
         <scene sceneID="gM9-pa-CNe">
             <objects>
-                <viewController id="pKK-5c-pZc" sceneMemberID="viewController">
+                <viewController id="pKK-5c-pZc" customClass="PhotosCollectionViewController" customModule="Astronomy_Hybrid" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tif-KT-dgb">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -57,6 +57,9 @@
                         <viewLayoutGuide key="safeArea" id="gah-Zn-3Gx"/>
                     </view>
                     <navigationItem key="navigationItem" id="JRc-iM-f5g"/>
+                    <connections>
+                        <outlet property="collectionView" destination="Ltc-qh-ZWj" id="7kd-kb-m1w"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4IW-Va-yHd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
