--- a/Astronomy-Hybrid/Astronomy-Hybrid/Base.lproj/Main.storyboard
+++ b/Astronomy-Hybrid/Astronomy-Hybrid/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,8 +16,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="754-id-5UG">
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="754-id-5UG">
                             <size key="itemSize" width="150" height="150"/>
+                            <size key="estimatedItemSize" width="150" height="150"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -25,23 +27,21 @@
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCell" id="zcX-JD-rY7" customClass="ImageCollectionViewCell" customModule="Astronomy_Hybrid" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="wdH-tz-QWb">
                                     <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hcb-xD-Xfx">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hcb-xD-Xfx">
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="Hcb-xD-Xfx" secondAttribute="height" multiplier="1:1" id="6hU-vM-17O"/>
-                                            </constraints>
                                         </imageView>
                                     </subviews>
-                                </view>
-                                <constraints>
-                                    <constraint firstItem="Hcb-xD-Xfx" firstAttribute="top" secondItem="zcX-JD-rY7" secondAttribute="topMargin" constant="-8" id="7ea-YL-UhB"/>
-                                    <constraint firstItem="Hcb-xD-Xfx" firstAttribute="centerY" secondItem="zcX-JD-rY7" secondAttribute="centerY" id="Dnc-ho-ase"/>
-                                    <constraint firstItem="Hcb-xD-Xfx" firstAttribute="centerX" secondItem="zcX-JD-rY7" secondAttribute="centerX" id="I2u-r0-8xA"/>
-                                </constraints>
+                                    <constraints>
+                                        <constraint firstItem="Hcb-xD-Xfx" firstAttribute="width" secondItem="wdH-tz-QWb" secondAttribute="width" id="X7S-tX-ZQI"/>
+                                        <constraint firstItem="Hcb-xD-Xfx" firstAttribute="leading" secondItem="wdH-tz-QWb" secondAttribute="leading" id="duE-gS-Ygi"/>
+                                        <constraint firstItem="Hcb-xD-Xfx" firstAttribute="height" secondItem="wdH-tz-QWb" secondAttribute="height" id="nMq-6m-3t2"/>
+                                        <constraint firstItem="Hcb-xD-Xfx" firstAttribute="top" secondItem="wdH-tz-QWb" secondAttribute="top" id="xBl-CH-Ae1"/>
+                                    </constraints>
+                                </collectionViewCellContentView>
                                 <connections>
                                     <outlet property="imageView" destination="Hcb-xD-Xfx" id="j8X-SV-r5W"/>
                                     <segue destination="RfJ-4A-x1y" kind="show" id="AVH-Dj-rFy"/>
