--- a/AstronomyMix/AstronomyMix/View/Base.lproj/Main.storyboard
+++ b/AstronomyMix/AstronomyMix/View/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kWK-UB-lfi">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kWK-UB-lfi">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,19 +20,34 @@
                             <size key="itemSize" width="189" height="189"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="ScY-J0-LEE" customClass="JLA">
-                                <rect key="frame" x="0.0" y="0.0" width="189" height="189"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="ScY-J0-LEE" customClass="JLAAstronomyCollectionViewCell">
+                                <rect key="frame" x="10" y="10" width="189" height="189"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="gBU-ee-I0r">
                                     <rect key="frame" x="0.0" y="0.0" width="189" height="189"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Ry6-8k-8KC">
+                                            <rect key="frame" x="0.0" y="1" width="189" height="186.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="189" id="FWL-cc-Q2n"/>
+                                                <constraint firstAttribute="width" constant="189" id="LQZ-vC-g56"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Ry6-8k-8KC" firstAttribute="top" secondItem="gBU-ee-I0r" secondAttribute="top" id="dCg-pd-Xp2"/>
+                                        <constraint firstAttribute="bottom" secondItem="Ry6-8k-8KC" secondAttribute="bottom" id="fSy-Jh-swU"/>
+                                        <constraint firstItem="Ry6-8k-8KC" firstAttribute="leading" secondItem="gBU-ee-I0r" secondAttribute="leading" id="osD-0a-MVo"/>
+                                        <constraint firstAttribute="trailing" secondItem="Ry6-8k-8KC" secondAttribute="trailing" id="zl0-zu-56R"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
-                                <color key="backgroundColor" red="0.89303421969999996" green="0.13260403279999999" blue="0.13222166899999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <size key="customSize" width="189" height="189"/>
                                 <connections>
+                                    <outlet property="imageView" destination="Ry6-8k-8KC" id="jpM-6L-meW"/>
                                     <segue destination="OyH-Gu-a2P" kind="show" identifier="DetailSegue" id="sun-5y-RvO"/>
                                 </connections>
                             </collectionViewCell>
@@ -100,6 +115,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="photo.fill" catalog="system" width="64" height="46"/>
+        <image name="photo.fill" catalog="system" width="128" height="93"/>
     </resources>
 </document>
