Created folders. Created bridging header. Created Rover file.

--- a/AstronomyObjectiveC/AstronomyObjectiveC/Base.lproj/Main.storyboard
+++ b/AstronomyObjectiveC/AstronomyObjectiveC/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c2v-Du-cdC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1347.8260869565217" y="93.75"/>
+            <point key="canvasLocation" x="1159" y="94"/>
         </scene>
         <!--Title-->
         <scene sceneID="j2A-PB-cw9">
@@ -90,7 +90,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Pl-Up-py1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2140.5797101449275" y="93.75"/>
+            <point key="canvasLocation" x="1851" y="94"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="QBP-r0-EOC">
